# sachista-chess-rust

./: Cargo.toml  Makefile
src/: main.rs
src/bitboard/: bitboard_constants.rs  bitboard_constants_tests.rs  bitboard_operators.rs  bitboard_tests.rs  index.rs  index_constants.rs  index_tests.rs  mod.rs  string.rs
src/chessboard/: board_indices.rs  castling_options.rs  chessboard_tests.rs  color.rs  color_tests.rs  fen.rs  fen_tests.rs  mod.rs  moves.rs  moves_tests.rs  piece.rs  piece_tests.rs  string.rs  string_tests.rs  zobrist.rs  zobrist_tests.rs
src/generator/: generator_king.rs  generator_king_tests.rs  generator_knight.rs  generator_knight_tests.rs  generator_pawn.rs  generator_pawn_tests.rs  mod.rs
